--- a/app/templates/Candidate/registration.html
+++ b/app/templates/Candidate/registration.html
@@ -5,7 +5,7 @@
       {% block 'style' %}
     <style>
         *{
-            margin:0px;
+            margin:0;
             padding:0;
             box-sizing: border-box;
             font-family: 'Nunito', sans-serif;
@@ -16,58 +16,40 @@
             width: 100%;
             height: 100vh;
            overflow-x: hidden;
-           position: absolute;
+
            justify-content: center;
         }
         .container {
-          
            min-height: 300px;
             position: relative;
             min-width: 500px;
             max-width: 600px;
-            width: 80%;
+            width: 100%;
             border-radius: 16px;
             padding: 30px;
-            margin: 2% 30% ;
-            margin-left: auto;
-            background-color: wheat;
-            /* box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
-            10px 10px 70px rgba(0,0,0,0.25),
-            inset 5px 5px 10px rgba(0,0,0,0.5),
-            inset 5px 5px 20px rgba(255,255,255,0.2),
-            inset -5px -5px 15px rgba(0, 0, 0, 0.75);  */
+            margin: 2% auto ;
+            color:black;
+            background-color: aliceblue;
+            border:1px solid gray;
         }
         .container .header {
             position:relative;
             font-size: 1.9rem;
             font-weight: 600;
-            color:navy;
+            
             text-align: center;
         }
-        /* .container header::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            height: 5px;
-            width:28px;
-            border-radius: 9px;
-            background: cornflowerblue;
-        } */
         .container #form {
             /* background-color: #155724; */
             min-height: 400px;
              position:relative; 
-            color:white;
+            color: black;
           
         }
         .container #form .title {
             display: block;
             margin-bottom:8px ;
-            font-size: 1.8rem;
-            font-weight: 500;
-            color: cornflowerblue; 
-            
+           
         }
     
         .container #form .fields {
@@ -75,7 +57,7 @@
             flex-direction: column;
             align-items: center;
             flex-wrap: wrap;
-            /* background-color: #4070f4; */  cursor: pointer;
+            cursor: pointer;
         }
         .input-fields {
          display:inline-flex;
@@ -83,23 +65,20 @@
          width:calc(100% / 2 - 15px);
          margin:5px 5px;
          justify-content: space-between;
-        color:cornflowerblue;
-        font-size: 1.3rem;
-     
+       
         }
         .input-fields input {
 
             cursor: pointer;
             flex-wrap: wrap;
-            height: 40px;
+      
             border-radius: 4px;
-            /* border:1px solid black; */
             border: none;
             outline: none;
             font-size: 1rem;
             font-weight: 400;
-            padding: 0 15px;
-            /* color: white; */
+            padding: 10px 15px;
+         
             background-color: transparent;
             box-shadow: 0 0 70px 90px rgba(0,0,0,0.1);
             transition: 0.3s;
@@ -107,7 +86,7 @@
         }
         .input-fields input:hover{
             border-bottom: 1px solid #4070f4;
-            background-color: white;
+          
         }
      
         .file {
@@ -127,7 +106,7 @@
         .cv-file {
             font-size: 1.3rem;
             font-weight: 400;
-            color: cornflowerblue; 
+           
         }
         .ins-uni {
             display:flex;
@@ -176,11 +155,7 @@
             background-color: transparent;
             color:black;
         }
-        #form .buttons .backBtn:hover {
-            border: 1px solid #4070f4;
-            background-color: transparent;
-            color:black;
-        }
+       
  
         #form .buttons {
             display: flex;
@@ -199,43 +174,28 @@
         font-size: 1.3rem;
         color: rgb(241, 32, 17);
        }
-      .container #form textarea {
-            cursor: pointer;
-            flex-wrap: wrap;
-            height: 40px;
-            border-radius: 4px;
-            border:1px solid black;
-            outline: none;
-            font-size: 1rem;
-            font-weight: 400;
-            padding: 0 15px;
-            /* color: white; */
-            background-color: transparent;
-            box-shadow: 0 0 70px 90px rgba(0,0,0,0.1);
-            display:inline-flex;
-           flex-direction:column;
-           width:calc(100%/1 - 16px);
-            resize: vertical;
-            justify-content: space-between;
-            color:cornflowerblue;
-            font-size: 1.3rem;
-       } 
+
        /* Success message */
 .alert-success {
     color: #155724;  /* Text color */
     background-color: #d4edda;  /* Background color */
     border-color: #c3e6cb;  /* Border color */
-}
-
-/* Error message */
-.alert-error {
-    font-size: 1.5rem;
     text-align: center;
     align-items: center;
     justify-content: center;
     font-weight: lighter;
-    height: 40px;
-    color: #ff0820;  /* Text color */
+    height: 30px;
+}
+
+/* Error message */
+.alert-error {
+    font-size: 1.1rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-weight: lighter;
+    height: 30px;
+   
     background-color: #f8d7da;  /* Background color */
     border-color: #f5c6cb;  /* Border color */
 }
@@ -356,8 +316,8 @@
                     <div class="fields">
                         <div class="input-fields">
                             <label for=""> Specialization <em> *</em></label>
-                                    {{ form_data.last_name }}
-                            {% comment %} <input type="text" placeholder=" Enter Your Gender" > {% endcomment %}
+                                    {% comment %} {{ form_data.last_name }} {% endcomment %}
+                            <input type="text" name= "specialization" placeholder=" Specialization" >
                         </div>
                     </div> 
                                 <div class="buttons">
